[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "jaffle_dagster"
version = "0.1.0"
description = "Dagster orchestration for jaffle_shop"
requires-python = ">=3.10"

dependencies = [
  "dagster",
  "dagster-webserver",
  "dagster-cloud",
  "requests",
  "snowflake-connector-python",
]

[tool.dagster]
# This tells Dagster Cloud which module has the Definitions object.
module_name = "jaffle_dagster.definitions"
code_location_name = "jaffle_dagster"
